fixing inconsistent spacing and adding active status to navigation

--- a/src/css/pages/_imageGrid.scss
+++ b/src/css/pages/_imageGrid.scss
@@ -9,20 +9,32 @@
     align-content: stretch;
     justify-content: center;
 }
-  
 
 /* Create 3 equal columns that sit next to each other */
 .column {
     flex: 23%;
-    // max-width: 31%;
     padding: 0 17px;
-    margin-top: -32px;
+    margin-bottom: 32px;
 }
 
-.column img {
-    // margin-top: 32px;
+.image-and-details-on-grid {
+    margin-bottom: 32px;
     vertical-align: middle;
     width: 100%;
+}
+
+.image-and-details-on-grid {
+    &:last-child {
+        margin-bottom: 0px;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .column img {
+        margin-bottom: 32px;
+        vertical-align: middle;
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 1650px) {
@@ -31,35 +43,31 @@
     }
 }
 
-
 // Responsive layout - makes a 3 column-layout instead of four columns
 @media screen and (max-width: 1350px) {
-.column {
-    flex: 26%;
-    padding: 0 16px;
-    
-}
-
+    .column {
+        flex: 26%;
+        padding: 0 16px;  
+    }
 }
 
 // Responsive layout - 1 column on mobile layout
 @media screen and (max-width: 1000px) {
-.column {
-    flex: 52% 1;
-    padding: 0;
-}
+    .column {
+        flex: 52% 1;
+        padding: 0;
+    }
 
-.page-content-title {
-    padding-left: 8px;
-}
+    .page-content-title {
+        padding-left: 8px;
+    }
 
-.column img {
-    // margin-top: 32px;
-    vertical-align: middle;
-    width: 100%;
-}
+    .column img {
+        vertical-align: middle;
+        width: 100%;
+    }
     .top-row {
-    margin-top: 0px;
+        margin-top: 0px;
     }
 }
 
@@ -68,16 +76,11 @@
     .image-grid-container {
         padding: 0px;
         align-items: stretch;
-        // &:firstchild{
-        //     padding-top: 2px;
-        // }
     }
 
     .column {
         flex: 100%;
-        max-width: 100%;
-        padding-top: 30px;
-        
+        max-width: 100%;        
     }
 
     .page-content-title {
